
This file is in the public domain.

==============================================================
Luatex beta-0.79.0 was released 20140328 (4960)
==============================================================

* The luafontloader now returns 'tsidebearing' glyph values
  for OT/TT fonts, if applicable.

* new lua variables: stats.luatex_hashtype, stats.luatex_hashchars,
  stats.lastluaerrorstring; the luajittex string hash method is now
  lua 5.1 compliant which gives better results for similar strings

* new lua functions: tex.init_rand(), tex.uniform_rand(),
  tex.normal_rand(), tex.lua_math_randomseed(), tex.lua_math_random(),
  tex.show_context(); these helpers make luatex and luajittex compatible

* In the lua node interface, there were often issues with rubbish
  in (especially) 'prev' fields because luatex itself never looks
  at those values. This is now cleaned up to prevent weird stuff
  happening inside lua node processing code.

* pdf.pageattributes, pdf.pagesattributes, pdf.info, pdf.catalog,
  pdf.names and pdf.trailer now behave consistent and can be used
  to add these properties at the lua end in addition to their \pdf*
  counterparts atthe tex end; there are now pdf.get* and pdf.set*
  commands for them too (in future versions the old ways can become
  obsolete)

* new accessors pdf.geth, pdfgetv, pdfgetpos, getgetmatrix as well
  as pdfhasmatrix helpers (in future versions the direct pdf.h and
  pdf.v accessor can become obsolete)

* the pdf.pdf* variables have been removed (they were already
  obsolete for some years)

* a new properties mechanism for associating lua tables with nodes
  that get cleaned up when nodes a freed (see manual for details)

* several improvements to the way temporary (backend) data is stored
  at the lua end (better protection, more consistent)

* a 'l' type for user nodes that holds a lua variable (can be set
  at the lua end)

* if a late lua node is set at the lua end the string value can be